# spotimynd

./: .cache  README.md  credentials.json  pyproject.toml
exported_files/: playlists.json
my_spotify_project/: getting_playlist_content.py  import_playlists.py  producer.py
